<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvUbahSandi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/ubah_kata_sandi"
        android:textSize="25dp"
        android:fontFamily="@font/poppins_bold"
        android:textColor="@color/cheva_kuning"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:clickable="true"
        android:id="@+id/tvIkonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:layout_marginStart="25dp"
        android:text="@string/back"
        android:textSize="40dp"
        android:fontFamily="@font/poppins_bold"
        android:textColor="@color/cheva_kuning"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/btnKirimSandiBaru"
        android:layout_width="300dp"
        android:layout_height="58dp"
        android:layout_marginBottom="70dp"
        android:text="@string/kirim"
        android:textSize="20dp"
        android:textAllCaps="false"
        android:fontFamily="@font/poppins_bold"
        android:background="@drawable/orangecheva"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/edtVerifikasiSandiBaru"
        android:layout_width="280dp"
        android:layout_height="56dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/stroke_template"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@id/btnKirimSandiBaru"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvVerifSandiBaru"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:text="@string/verif_kata_sandi_baru"
        android:fontFamily="@font/poppins_regular"
        android:textSize="15dp"
        android:textColor="@color/cheva_kuning"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/edtVerifikasiSandiBaru"/>

    <EditText
        android:id="@+id/edtPasswordBaru"
        android:layout_width="280dp"
        android:layout_height="56dp"
        android:layout_marginBottom="40dp"
        android:ems="10"
        android:inputType="textPassword"
        android:background="@drawable/stroke_template"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tvVerifSandiBaru"/>

    <TextView
        android:id="@+id/tvKataSandiBaru"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:text="@string/kata_sandi_baru"
        android:fontFamily="@font/poppins_regular"
        android:textSize="15dp"
        android:textColor="@color/cheva_kuning"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/edtPasswordBaru"/>

    <ImageView
        android:id="@+id/ivUbahKataSandiBaru"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/verifsandi"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tvKataSandiBaru"
        app:layout_constraintTop_toBottomOf="@id/tvUbahSandi"/>

</androidx.constraintlayout.widget.ConstraintLayout>