<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ivLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toTopOf="@+id/tvUsername"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLogin"
        app:srcCompat="@drawable/illustlogin" />

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/login"
        android:textColor="#F7A400"
        android:textSize="29sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/username"
        android:layout_marginStart="70dp"
        android:textColor="#F7A400"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/edtUsername"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edtUsername"
        android:layout_width="280dp"
        android:layout_height="56dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/stroke_template"
        android:padding="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/tvPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/password"
        android:textColor="#F7A400"
        android:textSize="20sp"
        android:layout_marginStart="70dp"
        app:layout_constraintBottom_toTopOf="@+id/edtPassword"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="280dp"
        android:layout_height="56dp"
        android:background="@drawable/stroke_template"
        android:ems="10"
        android:padding="10dp"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPassword" />

    <TextView
        android:clickable="true"
        android:id="@+id/tvLupaSandi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/lupa_kata_sandi"
        android:textSize="12sp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/edtPassword"
        app:layout_constraintBottom_toTopOf="@+id/btnLogin"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        android:layout_width="300dp"
        android:layout_height="58dp"
        android:background="@drawable/orangecheva"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/tvNoAkun"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvNoAkun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tidak_punya_akun"
        android:textSize="12sp"
        android:layout_marginBottom="50dp"
        android:layout_marginEnd="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:clickable="true"
        android:id="@+id/tvBuatAkun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buat_akun"
        android:textSize="12sp"
        android:layout_marginBottom="50dp"
        android:layout_marginStart="10dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/tvNoAkun"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/toggle_pw"
        android:layout_marginLeft="230dp"
        app:layout_constraintTop_toTopOf="@id/edtPassword"
        app:layout_constraintBottom_toBottomOf="@id/edtPassword"
        app:layout_constraintStart_toStartOf="@id/edtPassword"
        app:layout_constraintEnd_toEndOf="@id/edtPassword"
        />

</androidx.constraintlayout.widget.ConstraintLayout>