<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvBuatAkunRegistrasi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/buat_akun"
        android:textColor="#F7A400"
        android:textSize="29sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvIconBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:clickable="true"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/back"
        android:textColor="#F7A400"
        android:textSize="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivRegistrasi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        app:layout_constraintBottom_toTopOf="@id/tvEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvBuatAkunRegistrasi"
        app:layout_constraintVertical_bias="0.358"
        app:srcCompat="@drawable/registration" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/email"
        android:textColor="@color/cheva_kuning"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivRegistrasi" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="280dp"
        android:layout_height="56dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/stroke_template"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvEmail" />

    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/kata_sandi"
        android:textColor="@color/cheva_kuning"
        android:textSize="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtEmail" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="280dp"
        android:layout_height="56dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/stroke_template"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPassword" />

    <ImageView
        android:id="@+id/ivKataSandi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="225dp"
        app:layout_constraintBottom_toBottomOf="@id/edtPassword"
        app:layout_constraintEnd_toEndOf="@id/edtPassword"
        app:layout_constraintStart_toStartOf="@id/edtPassword"
        app:layout_constraintTop_toTopOf="@id/edtPassword"
        app:srcCompat="@drawable/toggle_pw" />

    <TextView
        android:id="@+id/tvVerifikasiPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/verifikasi_kata_sandi"
        android:textColor="@color/cheva_kuning"
        android:textSize="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtPassword" />

    <EditText
        android:id="@+id/edtVerifikasiPassword"
        android:layout_width="280dp"
        android:layout_height="56dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/stroke_template"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvVerifikasiPassword" />

    <ImageView
        android:id="@+id/ivVerifikasiKataSandi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="225dp"
        app:layout_constraintBottom_toBottomOf="@id/edtVerifikasiPassword"
        app:layout_constraintEnd_toEndOf="@id/edtVerifikasiPassword"
        app:layout_constraintStart_toStartOf="@id/edtVerifikasiPassword"
        app:layout_constraintTop_toTopOf="@id/edtVerifikasiPassword"
        app:srcCompat="@drawable/toggle_pw" />

    <Button
        android:id="@+id/btnBuatAkun"
        android:layout_width="300dp"
        android:layout_height="58dp"
        android:layout_marginBottom="80dp"
        android:background="@drawable/orangecheva"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/buat"
        android:textAllCaps="false"
        android:textSize="22dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>